--- a/tests/testapp/core/templates/core/custom_code_editor_page.html
+++ b/tests/testapp/core/templates/core/custom_code_editor_page.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>{{ page.title }}</h1>
-        <pre><code>{{ page.code }}</code></pre>
-        <pre><code>{{ page.secondcode }}</code></pre>
+        <pre><code>{{ page.code.code }}</code></pre>
+        <pre><code>{{ page.secondcode.code }}</code></pre>
     </body>
 </html>
