--- a/wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/code.css
+++ b/wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/code.css
@@ -8,6 +8,12 @@
 	color: var(--w-color-text-button)
 }
 
+.lock-ace {
+	width: 16px;
+	height: 16px;
+	color: var(--w-color-text-button)
+}
+
 .editor-container {
 	width: 100%;
 }
@@ -64,6 +70,33 @@
 
 .editor-container .dropdown-content li:hover {
 	background-color: var(--w-color-border-furniture);
+}
+
+.switch-container{
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: none;
+    justify-content: center;
+}
+
+.text-mode{
+	color: var(--w-color-text-button);
+    font-weight: bold;
+}
+
+.switch{
+	border-radius: 15px 15px 0 0;
+    gap: 8px;
+    font-size: 14px;
+    cursor: pointer;
+    padding: 20px;
+    margin: 0;
+    background-color: var(--w-color-surface-button-default);
+}
+
+.switch:hover{
+	background-color: var(--w-color-surface-button-hover);
 }
 
 .editor-container .button-dropdown {
