--- a/wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/code.css
+++ b/wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/code.css
@@ -5,25 +5,26 @@
 .icon-ace {
 	width: 16px;
 	height: 16px;
-	color: var(--w-color-text-button)
+	color: var(--w-color-text-button, white)
 }
 
 .lock-ace {
 	width: 16px;
 	height: 16px;
-	color: var(--w-color-text-button)
+	color: var(--w-color-text-button, white)
 }
 
 .editor-container {
 	width: 100%;
+	position: relative;
 }
 
 .editor-container .dropdown {
 	width: auto;
-	background-color: var(--w-color-surface-button-default);
+	background-color: var(--w-color-surface-button-default, teal);
 	position: absolute;
 	z-index: 99;
-	box-shadow: 0 2px 5px var(--w-color-box-shadow-md);
+	box-shadow: 0 2px 5px var(--w-color-box-shadow-md, darkgray);
 	display: inline-block;
 	text-align: center;
 	line-height: 35px;
@@ -31,27 +32,26 @@
 }
 
 .editor-container .dropdown:hover {
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .editor-container .my-input {
-	border: 1px solid var(--w-color-border-field-default) !important;
+	border: 1px solid var(--w-color-border-field-default, #91d2d2) !important;
 	margin: 20px;
 	border: 20px;
 	padding: 15px;
-	background-color: var(--w-color-surface-page);
+	background-color: var(--w-color-surface-page, white);
 	font-size: 14px;
 	width: 170px;
 	border-radius: 5px;
-	font-family: var(--w-font-mono);
+	font-family: var(--w-font-mono, monospace);
 }
 
 .editor-container .dropdown-content {
 	position: relative;
-	background-color: var(--w-color-surface-page);
+	background-color: var(--w-color-surface-page, darkcyan);
 	min-width: 230px;
 	overflow: auto;
-	/* border: 1px solid #ddd; */
 	z-index: 1;
 	max-height: 300px;
 	border-radius: 5px;
@@ -59,8 +59,8 @@
 }
 
 .editor-container .dropdown-content li {
-	color: var(--w-color-text-label);
-	padding: 12px 0 12px 22px;
+	color: var(--w-color-text-label, white);
+	padding: 14px 0 14px 22px;
 	text-decoration: none;
 	display: block;
 	text-align: left;
@@ -69,7 +69,7 @@
 }
 
 .editor-container .dropdown-content li:hover {
-	background-color: var(--w-color-border-furniture);
+	background-color: var(--w-color-border-furniture, darkslategray);
 }
 
 .switch-container{
@@ -81,8 +81,12 @@
 }
 
 .text-mode{
-	color: var(--w-color-text-button);
+	color: var(--w-color-text-button, white);
     font-weight: bold;
+}
+
+.help-text{
+	color: var(--w-color-text-context, whitesmoke);
 }
 
 .switch{
@@ -92,11 +96,12 @@
     cursor: pointer;
     padding: 20px;
     margin: 0;
-    background-color: var(--w-color-surface-button-default);
+    background-color: var(--w-color-surface-button-default, teal);
+	color: var(--w-color-text-button, white);
 }
 
 .switch:hover{
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .editor-container .button-dropdown {
@@ -128,7 +133,7 @@
 }
 
 .options-container {
-	background-color: var(--w-color-surface-page);
+	background-color: var(--w-color-surface-page, #282828);
 	overflow: auto;
 	padding: 32px 21px 0;
 	max-width: 30vw;
@@ -180,32 +185,32 @@
 
 .search-bar {
 	width: 100%;
-	background-color: var(--w-color-surface-field);
+	background-color: var(--w-color-surface-field, white);
 	margin-right: 14px;
 	border-radius: 5px;
 	padding: 15px !important;
-	color: var(--w-color-text-context);
+	color: var(--w-color-text-context, darkgray);
 	border: 0;
-	font-family: var(--w-font-mono);
+	font-family: var(--w-font-mono, monospace);
 	font-size: 14px;
 	font-weight: 400;
 	line-height: normal;
 }
 
 .search-bar::-moz-placeholder{
-	color: var(--w-color-text-placholder);
+	color: var(--w-color-text-placholder, gray);
 }
 
 .search-bar:-moz-placeholder{
-	color: var(--w-color-text-placholder);
+	color: var(--w-color-text-placholder, gray);
 }
 
 .search-bar:-ms-placeholder{
-	color: var(--w-color-text-placholder);
+	color: var(--w-color-text-placholder, gray);
 }
 
 .search-bar::-webkit-input-placeholder{
-	color: var(--w-color-text-placholder);
+	color: var(--w-color-text-placholder, gray);
 }
 
 .search-area {
@@ -216,7 +221,7 @@
 }
 
 .more-options-button {
-	background-color: var(--w-color-surface-button-default);
+	background-color: var(--w-color-surface-button-default, teal);
 	border-radius: 50px;
 	padding: 8px 15px;
 	display: flex;
@@ -234,15 +239,15 @@
 }
 
 .more-options-button:hover {
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .button-options {
 	z-index: 99;
 	padding: 0 !important;
 	border: 0;
-	background-color: var(--w-color-surface-tooltip);
-	box-shadow: var(--w-color-box-shadow-md) 0px 7px 29px 0px;
+	background-color: var(--w-color-surface-tooltip, darkblue);
+	box-shadow: var(--w-color-box-shadow-md, darkgray) 0px 7px 29px 0px;
 	width: 35px;
 	height: 50px;
 	border-radius: 0 0 0 15px;
@@ -251,7 +256,7 @@
 }
 
 .button-options:hover {
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .button-container{
@@ -262,7 +267,7 @@
 }
 
 .copy-options {
-	background-color: var(--w-color-primary);
+	background-color: var(--w-color-primary, #2e1f5e);
 	border-radius: 5px;
 	display: flex;
 	align-items: center;
@@ -273,11 +278,11 @@
 }
 
 .copy-options:hover {
-	background-color: var(--w-color-primary-200);
+	background-color: var(--w-color-primary-200, #261a4e);
 }
 
 .undo-options {
-	background-color: var(--w-color-white);
+	background-color: var(--w-color-white, darkslategray);
 	border-radius: 5px;
 	display: flex;
 	align-items: center;
@@ -288,15 +293,15 @@
 }
 
 .undo-options svg {
-	color: var(--w-color-primary);
+	color: var(--w-color-primary, #2e1f5e);
 }
 
 .undo-options:hover {
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .undo-options:hover svg {
-	color: var(--w-color-white);
+	color: var(--w-color-white, white);
 }
 
 .divider-title {
@@ -310,10 +315,10 @@
 	position: absolute;
 	top: 57px;
 	right: 38px;
-	background-color: var(--w-color-surface-field);
+	background-color: var(--w-color-surface-field, white);
 	z-index: 101;
 	border-radius: 2px;
-	box-shadow: 0 2px 5px var(--w-color-box-shadow-md);
+	box-shadow: 0 2px 5px var(--w-color-box-shadow-md, darkgray);
 }
 
 .save-options {
@@ -324,13 +329,13 @@
 	align-items: center;
 	display: flex;
 	width: 100%;
-	color: var(--w-color-text-button);
-	background-color: var(--w-color-surface-menus);
+	color: var(--w-color-text-button, white);
+	background-color: var(--w-color-surface-menus, #2e1f5e);
 	cursor: pointer;
 }
 
 .save-options:hover {
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .delete-options {
@@ -347,7 +352,7 @@
 }
 
 .delete-options:hover {
-	background-color: var(--w-color-surface-button-hover);
+	background-color: var(--w-color-surface-button-hover, #025d5d);
 }
 
 .label-text {
@@ -370,11 +375,11 @@
 	margin-bottom: 19px;
 	margin-top: 10px;
 	text-transform: capitalize;
-	color: var(--w-color-text-label);
+	color: var(--w-color-text-label, white);
 }
 
 .line-category {
-	border-top: 1px solid var(--w-color-border-field-default);
+	border-top: 1px solid var(--w-color-border-field-default, #91d2d2);
 	margin-top: 16.5px;
 	margin-right: 25px;
 	margin-bottom: 13.5px;
@@ -388,25 +393,29 @@
 	/* Range Slider */
 }
 
+.lists-inputs label {
+	color: var(--w-color-text-status-label, white);
+	font-size: 16px;
+}
+
 .lists-inputs select {
 	appearance: auto;
 	padding: 5px 20px;
 	width: 100%;
-	font-size: 12px;
 	border-radius: 5px;
-	background: var(--w-color-surface-field);
-	border: 1px solid var(--w-color-border-field-default);
+	background: var(--w-color-surface-field, white);
+	border: 1px solid var(--w-color-border-field-default, #91d2d2);
 	font-size: 15px;
 }
 
 .lists-inputs input[type='checkbox'] {
 	display: block;
 	border: none;
-	background-color: var(--w-color-surface-field);
+	background-color: var(--w-color-surface-field, white);
 	width: 62px;
 	height: 27px;
 	border-radius: 3px;
-	box-shadow: inset 0 1px 4px var(--w-color-box-shadow-md);
+	box-shadow: inset 0 1px 4px var(--w-color-box-shadow-md, darkgray);
 	cursor: pointer;
 	position: relative;
 	transition: background-color 1s;
@@ -416,14 +425,14 @@
 }
 
 @media (prefers-color-scheme: light) {
-	.lists-inputs input[type='checkbox'].error {
-		background-color: var(--w-color-critical-200);
+	.lists-inputs input[type='checkbox']:not(:checked) {
+		background-color: var(--w-color-critical-200, #ca3b3b);
 	}
 }
 
 @media (prefers-color-scheme: dark) {
-	.lists-inputs input[type='checkbox'].error {
-		background-color: var(--w-color-critical-100);
+	.lists-inputs input[type='checkbox']:not(:checked) {
+		background-color: var(--w-color-critical-100, #e55353);
 	}
 }
 
@@ -435,15 +444,15 @@
 	left: 0;
 	width: 45%;
 	height: 80%;
-	background-color: var(--w-color-surface-field);
+	background-color: var(--w-color-surface-field, white);
 	margin: 4%;
 	border-radius: 3px;
-	box-shadow: 0 1px 2px var(--w-color-box-shadow-md);
+	box-shadow: 0 1px 2px var(--w-color-box-shadow-md, darkgray);
 	transition: 0.5s all;
 }
 
 .lists-inputs input[type='checkbox']::before {
-	background: var(--w-color-white) !important;
+	background: var(--w-color-white, white) !important;
 	position: absolute !important;
 	bottom: 0 !important;
 	top: 0 !important;
@@ -452,7 +461,7 @@
 }
 
 .lists-inputs input[type='checkbox']:checked {
-	background-color: var(--w-color-positive-100);
+	background-color: var(--w-color-positive-100, #1b8666);
 }
 
 .lists-inputs input[type='checkbox']:checked:after {
@@ -464,8 +473,8 @@
 	width: 100%;
 	height: 19px;
 	border-radius: 5px;
-	border: 1px solid var(--w-color-border-field-default);
-	background: var(--w-color-surface-field);
+	border: 1px solid var(--w-color-border-field-default, #91d2d2);
+	background: var(--w-color-surface-field, white);
 	outline: none;
 	padding: 0;
 	display: inline-block;
@@ -478,17 +487,17 @@
 	width: 23px;
 	height: 23px;
 	border-radius: 5px;
-	background: var(--w-color-icon-primary);
+	background: var(--w-color-icon-primary, #2e1f5e);
 	cursor: pointer;
 	transition: background 0.15s ease-in-out;
 }
 
 .lists-inputs .range-slider__range::-webkit-slider-thumb:hover {
-	background: var(--w-color-icon-primary-hover);
+	background: var(--w-color-icon-primary-hover, #22154b);
 }
 
 .lists-inputs .range-slider__range:active::-webkit-slider-thumb {
-	background: var(--w-color-icon-secondary);
+	background: var(--w-color-icon-secondary, #026767);
 }
 
 .lists-inputs .range-slider__range::-moz-range-thumb {
@@ -496,32 +505,32 @@
 	height: 23px;
 	border: 0;
 	border-radius: 5px;
-	background: var(--w-color-icon-primary);
+	background: var(--w-color-icon-primary, #2e1f5e);
 	cursor: pointer;
 	transition: background 0.15s ease-in-out;
 }
 
 .lists-inputs .range-slider__range::-moz-range-thumb:hover {
-	background: var(--w-color-icon-primary-hover);
+	background: var(--w-color-icon-primary-hover, #22154b);
 }
 
 .lists-inputs .range-slider__range:active::-moz-range-thumb {
-	background: var(--w-color-icon-secondary);
+	background: var(--w-color-icon-secondary, #026767);
 }
 
 .lists-inputs .range-slider__range:focus::-webkit-slider-thumb {
-	box-shadow: 0 0 0 3px var(--w-color-surface-page), 0 0 0 6px var(--w-color-box-shadow-md);
+	box-shadow: 0 0 0 3px var(--w-color-surface-page, white), 0 0 0 6px var(--w-color-box-shadow-md, darkgray);
 }
 
 .lists-inputs .range-slider__value {
 	display: inline-block;
 	position: relative;
 	width: fit-content;
-	color: var(--w-color-text-label);
+	color: var(--w-color-text-label, white);
 	line-height: 20px;
 	text-align: center;
 	border-radius: 3px;
-	background: var(--w-color-surface-tooltip);
+	background: var(--w-color-surface-tooltip, darkblue);
 	padding: 5px 10px;
 	margin-left: 8px;
 }
@@ -531,13 +540,13 @@
 	inset: -45% auto auto 2px;
 	border-left: 7px solid transparent;
 	border-right: 7px solid transparent;
-	border-bottom: 7px solid var(--w-color-border-field-default);
+	border-bottom: 7px solid var(--w-color-border-field-default, #91d2d2);
 	border-top: 7px solid transparent;
 	content: '';
 }
 
 .lists-inputs ::-moz-range-track {
-	background: var(--w-color-surface-tooltip);
+	background: var(--w-color-surface-tooltip, darkblue);
 	border: 0;
 }
 
