Finally, fix event on: - `copyToClipboard` - `resetOptions` - `copyOptions` --- -Also remove `onChange` as it is no use anymore that contradict with my own even method using property named `active`. ---  - Added new __kwargs__ for `CustomCodeEditorBlock` called `block` that can distinguish it widgets from Streamblock vs Panel Widget.  ---  - Added new GIF for best introduction of this wagtail widget

--- a/wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/code.css
+++ b/wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/code.css
@@ -233,6 +233,7 @@
 .changes-copy{
 	display: inline-flex;
 	align-items: center;
+	color: var(--w-color-text-label, white);
 }
 
 .more-options-button:hover {
